@@ -1,3 +1,8 @@
+2008-03-04  Dominic Lachowicz <domlachowicz@gmail.com>
+
+	* rsvg-image.c: rsvg-convert crashed with SIGSEGV in _rsvg_acquire_xlink_href_resource()
+	(#520261)
+	
 2008-02-24  Dominic Lachowicz <domlachowicz@gmail.com>
 
 	* rsvg-text.c:
